--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
     "bugs": {
         "url": "https://github.com/Rn4rc1s0/queroBolsa/issues"
     },
-    "homepage": "https://github.com/Rn4rc1s0/queroBolsa#readme"
+    "homepage": "https://github.com/Rn4rc1s0/queroBolsa#readme",
+    "dependencies": {
+        "express": "^4.17.1",
+        "@fortawesome/fontawesome-free": "^5.9.0"
+    },
+    "devDependencies": {
+        "typescript": "^3.5.2"
+    }
 }
